y.output
Terminals unused in grammar

    INTEGER


Grammar

    0 $accept: program $end

    1 program: CLASS IDENTIFIER LBRACE DeclList RBRACE

    2 DeclList: DeclList MethodDecl
    3         | DeclList FieldDecl
    4         | DeclList SEMICOLON
    5         | ε

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type IdentList SEMICOLON
    8          | error SEMICOLON

    9 IdentList: IdentList COMMA IDENTIFIER
   10          | IDENTIFIER

   11 IdentListVar: IdentListVar COMMA IDENTIFIER
   12             | IDENTIFIER

   13 Type: BOOL
   14     | INT
   15     | DOUBLE

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt RPAR
   17             | VOID IDENTIFIER LPAR FormalParamOpt RPAR

   18 FormalParamOpt: FormalParams
   19               | ε

   20 FormalParams: Type IDENTIFIER
   21             | FormalParams COMMA Type IDENTIFIER
   22             | STRING LSQ RSQ IDENTIFIER

   23 MethodBody: LBRACE StmtOrVarList RBRACE

   24 StmtOrVarList: StmtOrVarList Statement
   25              | StmtOrVarList VarDecl
   26              | ε

   27 VarDecl: Type IdentListVar SEMICOLON

   28 Statement: LBRACE StmtList RBRACE
   29          | IfStmt
   30          | WHILE LPAR Expr RPAR Statement
   31          | RETURN ExprOpt SEMICOLON
   32          | ExprStmt SEMICOLON
   33          | PRINT LPAR Expr RPAR SEMICOLON
   34          | PRINT LPAR STRLIT RPAR SEMICOLON
   35          | error SEMICOLON

   36 StmtList: StmtList Statement
   37         | ε

   38 IfStmt: IF LPAR Expr RPAR MatchedStmt ELSE Statement
   39       | IF LPAR Expr RPAR Statement

   40 MatchedStmt: LBRACE StmtList RBRACE
   41            | IF LPAR Expr RPAR MatchedStmt ELSE MatchedStmt
   42            | WHILE LPAR Expr RPAR MatchedStmt
   43            | RETURN ExprOpt SEMICOLON
   44            | ExprStmt SEMICOLON
   45            | PRINT LPAR Expr RPAR SEMICOLON
   46            | PRINT LPAR STRLIT RPAR SEMICOLON

   47 ExprOpt: Expr
   48        | ε

   49 ExprStmt: IDENTIFIER LPAR ArgListOpt RPAR
   50         | IDENTIFIER LPAR error RPAR
   51         | IDENTIFIER ASSIGN Expr
   52         | PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   53         | PARSEINT LPAR error RPAR

   54 Expr: AssignExpr
   55     | LPAR error RPAR

   56 AssignExpr: IDENTIFIER ASSIGN AssignExpr
   57           | OrExpr

   58 OrExpr: OrExpr OR AndExpr
   59       | AndExpr

   60 AndExpr: AndExpr AND XorExpr
   61        | XorExpr

   62 XorExpr: XorExpr XOR EqExpr
   63        | EqExpr

   64 EqExpr: EqExpr EQ RelExpr
   65       | EqExpr NE RelExpr
   66       | RelExpr

   67 RelExpr: RelExpr LT ShiftExpr
   68        | RelExpr LE ShiftExpr
   69        | RelExpr GT ShiftExpr
   70        | RelExpr GE ShiftExpr
   71        | ShiftExpr

   72 ShiftExpr: ShiftExpr LSHIFT AddExpr
   73          | ShiftExpr RSHIFT AddExpr
   74          | AddExpr

   75 AddExpr: AddExpr PLUS MulExpr
   76        | AddExpr MINUS MulExpr
   77        | MulExpr

   78 MulExpr: MulExpr STAR UnaryExpr
   79        | MulExpr DIV UnaryExpr
   80        | MulExpr MOD UnaryExpr
   81        | UnaryExpr

   82 UnaryExpr: MINUS UnaryExpr
   83          | NOT UnaryExpr
   84          | PLUS UnaryExpr
   85          | PostfixExpr

   86 PostfixExpr: IDENTIFIER DOTLENGTH
   87            | IDENTIFIER LPAR ArgListOpt RPAR
   88            | IDENTIFIER LPAR error RPAR
   89            | PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   90            | PARSEINT LPAR error RPAR
   91            | LPAR Expr RPAR
   92            | IDENTIFIER
   93            | NATURAL
   94            | DECIMAL
   95            | BOOLLIT

   96 ArgListOpt: ArgList
   97           | ε

   98 ArgList: Expr
   99        | ArgList COMMA Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 35 50 53 55 88 90
    CLASS (258) 1
    LBRACE (259) 1 23 28 40
    RBRACE (260) 1 23 28 40
    PUBLIC (261) 6 7
    STATIC (262) 6 7
    SEMICOLON (263) 4 7 8 27 31 32 33 34 35 43 44 45 46
    COMMA (264) 9 11 21 99
    BOOL (265) 13
    INT (266) 14
    VOID (267) 17
    STRING (268) 22
    LPAR (269) 16 17 30 33 34 38 39 41 42 45 46 49 50 52 53 55 87 88 89 90 91
    RPAR (270) 16 17 30 33 34 38 39 41 42 45 46 49 50 52 53 55 87 88 89 90 91
    LSQ (271) 22 52 89
    RSQ (272) 22 52 89
    IF (273) 38 39 41
    ELSE (274) 38 41
    WHILE (275) 30 42
    RETURN (276) 31 43
    PRINT (277) 33 34 45 46
    PARSEINT (278) 52 53 89 90
    DOTLENGTH (279) 86
    ASSIGN (280) 51 56
    OR (281) 58
    AND (282) 60
    XOR (283) 62
    EQ (284) 64
    NE (285) 65
    LT (286) 67
    LE (287) 68
    GT (288) 69
    GE (289) 70
    LSHIFT (290) 72
    RSHIFT (291) 73
    PLUS (292) 75 84
    MINUS (293) 76 82
    STAR (294) 78
    DIV (295) 79
    MOD (296) 80
    NOT (297) 83
    IDENTIFIER <lexeme> (298) 1 9 10 11 12 16 17 20 21 22 49 50 51 52 56 86 87 88 89 92
    NATURAL <lexeme> (299) 93
    DECIMAL <lexeme> (300) 94
    INTEGER <lexeme> (301)
    DOUBLE <lexeme> (302) 15
    STRLIT <lexeme> (303) 34 46
    BOOLLIT <lexeme> (304) 95


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program <node> (51)
        on left: 1
        on right: 0
    DeclList <node> (52)
        on left: 2 3 4 5
        on right: 1 2 3 4
    MethodDecl <node> (53)
        on left: 6
        on right: 2
    FieldDecl <node> (54)
        on left: 7 8
        on right: 3
    IdentList <node> (55)
        on left: 9 10
        on right: 7 9
    IdentListVar <node> (56)
        on left: 11 12
        on right: 11 27
    Type <node> (57)
        on left: 13 14 15
        on right: 7 16 20 21 27
    MethodHeader <node> (58)
        on left: 16 17
        on right: 6
    FormalParamOpt <node> (59)
        on left: 18 19
        on right: 16 17
    FormalParams <node> (60)
        on left: 20 21 22
        on right: 18 21
    MethodBody <node> (61)
        on left: 23
        on right: 6
    StmtOrVarList <node> (62)
        on left: 24 25 26
        on right: 23 24 25
    VarDecl <node> (63)
        on left: 27
        on right: 25
    Statement <node> (64)
        on left: 28 29 30 31 32 33 34 35
        on right: 24 30 36 38 39
    StmtList <node> (65)
        on left: 36 37
        on right: 28 36 40
    IfStmt <node> (66)
        on left: 38 39
        on right: 29
    MatchedStmt <node> (67)
        on left: 40 41 42 43 44 45 46
        on right: 38 41 42
    ExprOpt <node> (68)
        on left: 47 48
        on right: 31 43
    ExprStmt <node> (69)
        on left: 49 50 51 52 53
        on right: 32 44
    Expr <node> (70)
        on left: 54 55
        on right: 30 33 38 39 41 42 45 47 51 52 89 91 98 99
    AssignExpr <node> (71)
        on left: 56 57
        on right: 54 56
    OrExpr <node> (72)
        on left: 58 59
        on right: 57 58
    AndExpr <node> (73)
        on left: 60 61
        on right: 58 59 60
    XorExpr <node> (74)
        on left: 62 63
        on right: 60 61 62
    EqExpr <node> (75)
        on left: 64 65 66
        on right: 62 63 64 65
    RelExpr <node> (76)
        on left: 67 68 69 70 71
        on right: 64 65 66 67 68 69 70
    ShiftExpr <node> (77)
        on left: 72 73 74
        on right: 67 68 69 70 71 72 73
    AddExpr <node> (78)
        on left: 75 76 77
        on right: 72 73 74 75 76
    MulExpr <node> (79)
        on left: 78 79 80 81
        on right: 75 76 77 78 79 80
    UnaryExpr <node> (80)
        on left: 82 83 84 85
        on right: 78 79 80 81 82 83 84
    PostfixExpr <node> (81)
        on left: 86 87 88 89 90 91 92 93 94 95
        on right: 85
    ArgListOpt <node> (82)
        on left: 96 97
        on right: 49 87
    ArgList <node> (83)
        on left: 98 99
        on right: 96 99


State 0

    0 $accept: • program $end
    1 program: • CLASS IDENTIFIER LBRACE DeclList RBRACE

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS • IDENTIFIER LBRACE DeclList RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS IDENTIFIER • LBRACE DeclList RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: CLASS IDENTIFIER LBRACE • DeclList RBRACE
    2 DeclList: • DeclList MethodDecl
    3         | • DeclList FieldDecl
    4         | • DeclList SEMICOLON
    5         | ε •

    $default  reduce using rule 5 (DeclList)

    DeclList  go to state 6


State 6

    1 program: CLASS IDENTIFIER LBRACE DeclList • RBRACE
    2 DeclList: DeclList • MethodDecl
    3         | DeclList • FieldDecl
    4         | DeclList • SEMICOLON
    6 MethodDecl: • PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: • PUBLIC STATIC Type IdentList SEMICOLON
    8          | • error SEMICOLON

    error      shift, and go to state 7
    RBRACE     shift, and go to state 8
    PUBLIC     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 7

    8 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    1 program: CLASS IDENTIFIER LBRACE DeclList RBRACE •

    $default  reduce using rule 1 (program)


State 9

    6 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC • STATIC Type IdentList SEMICOLON

    STATIC  shift, and go to state 14


State 10

    4 DeclList: DeclList SEMICOLON •

    $default  reduce using rule 4 (DeclList)


State 11

    2 DeclList: DeclList MethodDecl •

    $default  reduce using rule 2 (DeclList)


State 12

    3 DeclList: DeclList FieldDecl •

    $default  reduce using rule 3 (DeclList)


State 13

    8 FieldDecl: error SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 14

    6 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC • Type IdentList SEMICOLON
   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   16 MethodHeader: • Type IDENTIFIER LPAR FormalParamOpt RPAR
   17             | • VOID IDENTIFIER LPAR FormalParamOpt RPAR

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    VOID    shift, and go to state 17
    DOUBLE  shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


State 15

   13 Type: BOOL •

    $default  reduce using rule 13 (Type)


State 16

   14 Type: INT •

    $default  reduce using rule 14 (Type)


State 17

   17 MethodHeader: VOID • IDENTIFIER LPAR FormalParamOpt RPAR

    IDENTIFIER  shift, and go to state 21


State 18

   15 Type: DOUBLE •

    $default  reduce using rule 15 (Type)


State 19

    7 FieldDecl: PUBLIC STATIC Type • IdentList SEMICOLON
    9 IdentList: • IdentList COMMA IDENTIFIER
   10          | • IDENTIFIER
   16 MethodHeader: Type • IDENTIFIER LPAR FormalParamOpt RPAR

    IDENTIFIER  shift, and go to state 22

    IdentList  go to state 23


State 20

    6 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody
   23 MethodBody: • LBRACE StmtOrVarList RBRACE

    LBRACE  shift, and go to state 24

    MethodBody  go to state 25


State 21

   17 MethodHeader: VOID IDENTIFIER • LPAR FormalParamOpt RPAR

    LPAR  shift, and go to state 26


State 22

   10 IdentList: IDENTIFIER •  [SEMICOLON, COMMA]
   16 MethodHeader: Type IDENTIFIER • LPAR FormalParamOpt RPAR

    LPAR  shift, and go to state 27

    $default  reduce using rule 10 (IdentList)


State 23

    7 FieldDecl: PUBLIC STATIC Type IdentList • SEMICOLON
    9 IdentList: IdentList • COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 28
    COMMA      shift, and go to state 29


State 24

   23 MethodBody: LBRACE • StmtOrVarList RBRACE
   24 StmtOrVarList: • StmtOrVarList Statement
   25              | • StmtOrVarList VarDecl
   26              | ε •

    $default  reduce using rule 26 (StmtOrVarList)

    StmtOrVarList  go to state 30


State 25

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 6 (MethodDecl)


State 26

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   17 MethodHeader: VOID IDENTIFIER LPAR • FormalParamOpt RPAR
   18 FormalParamOpt: • FormalParams
   19               | ε •  [RPAR]
   20 FormalParams: • Type IDENTIFIER
   21             | • FormalParams COMMA Type IDENTIFIER
   22             | • STRING LSQ RSQ IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    STRING  shift, and go to state 31
    DOUBLE  shift, and go to state 18

    $default  reduce using rule 19 (FormalParamOpt)

    Type            go to state 32
    FormalParamOpt  go to state 33
    FormalParams    go to state 34


State 27

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   16 MethodHeader: Type IDENTIFIER LPAR • FormalParamOpt RPAR
   18 FormalParamOpt: • FormalParams
   19               | ε •  [RPAR]
   20 FormalParams: • Type IDENTIFIER
   21             | • FormalParams COMMA Type IDENTIFIER
   22             | • STRING LSQ RSQ IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    STRING  shift, and go to state 31
    DOUBLE  shift, and go to state 18

    $default  reduce using rule 19 (FormalParamOpt)

    Type            go to state 32
    FormalParamOpt  go to state 35
    FormalParams    go to state 34


State 28

    7 FieldDecl: PUBLIC STATIC Type IdentList SEMICOLON •

    $default  reduce using rule 7 (FieldDecl)


State 29

    9 IdentList: IdentList COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 36


State 30

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   23 MethodBody: LBRACE StmtOrVarList • RBRACE
   24 StmtOrVarList: StmtOrVarList • Statement
   25              | StmtOrVarList • VarDecl
   27 VarDecl: • Type IdentListVar SEMICOLON
   28 Statement: • LBRACE StmtList RBRACE
   29          | • IfStmt
   30          | • WHILE LPAR Expr RPAR Statement
   31          | • RETURN ExprOpt SEMICOLON
   32          | • ExprStmt SEMICOLON
   33          | • PRINT LPAR Expr RPAR SEMICOLON
   34          | • PRINT LPAR STRLIT RPAR SEMICOLON
   35          | • error SEMICOLON
   38 IfStmt: • IF LPAR Expr RPAR MatchedStmt ELSE Statement
   39       | • IF LPAR Expr RPAR Statement
   49 ExprStmt: • IDENTIFIER LPAR ArgListOpt RPAR
   50         | • IDENTIFIER LPAR error RPAR
   51         | • IDENTIFIER ASSIGN Expr
   52         | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   53         | • PARSEINT LPAR error RPAR

    error       shift, and go to state 37
    LBRACE      shift, and go to state 38
    RBRACE      shift, and go to state 39
    BOOL        shift, and go to state 15
    INT         shift, and go to state 16
    IF          shift, and go to state 40
    WHILE       shift, and go to state 41
    RETURN      shift, and go to state 42
    PRINT       shift, and go to state 43
    PARSEINT    shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    DOUBLE      shift, and go to state 18

    Type       go to state 46
    VarDecl    go to state 47
    Statement  go to state 48
    IfStmt     go to state 49
    ExprStmt   go to state 50


State 31

   22 FormalParams: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 51


State 32

   20 FormalParams: Type • IDENTIFIER

    IDENTIFIER  shift, and go to state 52


State 33

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParamOpt • RPAR

    RPAR  shift, and go to state 53


State 34

   18 FormalParamOpt: FormalParams •  [RPAR]
   21 FormalParams: FormalParams • COMMA Type IDENTIFIER

    COMMA  shift, and go to state 54

    $default  reduce using rule 18 (FormalParamOpt)


State 35

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt • RPAR

    RPAR  shift, and go to state 55


State 36

    9 IdentList: IdentList COMMA IDENTIFIER •

    $default  reduce using rule 9 (IdentList)


State 37

   35 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 56


State 38

   28 Statement: LBRACE • StmtList RBRACE
   36 StmtList: • StmtList Statement
   37         | ε •

    $default  reduce using rule 37 (StmtList)

    StmtList  go to state 57


State 39

   23 MethodBody: LBRACE StmtOrVarList RBRACE •

    $default  reduce using rule 23 (MethodBody)


State 40

   38 IfStmt: IF • LPAR Expr RPAR MatchedStmt ELSE Statement
   39       | IF • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 58


State 41

   30 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 59


State 42

   31 Statement: RETURN • ExprOpt SEMICOLON
   47 ExprOpt: • Expr
   48        | ε •  [SEMICOLON]
   54 Expr: • AssignExpr
   55     | • LPAR error RPAR
   56 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   57           | • OrExpr
   58 OrExpr: • OrExpr OR AndExpr
   59       | • AndExpr
   60 AndExpr: • AndExpr AND XorExpr
   61        | • XorExpr
   62 XorExpr: • XorExpr XOR EqExpr
   63        | • EqExpr
   64 EqExpr: • EqExpr EQ RelExpr
   65       | • EqExpr NE RelExpr
   66       | • RelExpr
   67 RelExpr: • RelExpr LT ShiftExpr
   68        | • RelExpr LE ShiftExpr
   69        | • RelExpr GT ShiftExpr
   70        | • RelExpr GE ShiftExpr
   71        | • ShiftExpr
   72 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   73          | • ShiftExpr RSHIFT AddExpr
   74          | • AddExpr
   75 AddExpr: • AddExpr PLUS MulExpr
   76        | • AddExpr MINUS MulExpr
   77        | • MulExpr
   78 MulExpr: • MulExpr STAR UnaryExpr
   79        | • MulExpr DIV UnaryExpr
   80        | • MulExpr MOD UnaryExpr
   81        | • UnaryExpr
   82 UnaryExpr: • MINUS UnaryExpr
   83          | • NOT UnaryExpr
   84          | • PLUS UnaryExpr
   85          | • PostfixExpr
   86 PostfixExpr: • IDENTIFIER DOTLENGTH
   87            | • IDENTIFIER LPAR ArgListOpt RPAR
   88            | • IDENTIFIER LPAR error RPAR
   89            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   90            | • PARSEINT LPAR error RPAR
   91            | • LPAR Expr RPAR
   92            | • IDENTIFIER
   93            | • NATURAL
   94            | • DECIMAL
   95            | • BOOLLIT

    LPAR        shift, and go to state 60
    PARSEINT    shift, and go to state 61
    PLUS        shift, and go to state 62
    MINUS       shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    $default  reduce using rule 48 (ExprOpt)

    ExprOpt      go to state 69
    Expr         go to state 70
    AssignExpr   go to state 71
    OrExpr       go to state 72
    AndExpr      go to state 73
    XorExpr      go to state 74
    EqExpr       go to state 75
    RelExpr      go to state 76
    ShiftExpr    go to state 77
    AddExpr      go to state 78
    MulExpr      go to state 79
    UnaryExpr    go to state 80
    PostfixExpr  go to state 81


State 43

   33 Statement: PRINT • LPAR Expr RPAR SEMICOLON
   34          | PRINT • LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 82


State 44

   52 ExprStmt: PARSEINT • LPAR IDENTIFIER LSQ Expr RSQ RPAR
   53         | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 83


State 45

   49 ExprStmt: IDENTIFIER • LPAR ArgListOpt RPAR
   50         | IDENTIFIER • LPAR error RPAR
   51         | IDENTIFIER • ASSIGN Expr

    LPAR    shift, and go to state 84
    ASSIGN  shift, and go to state 85


State 46

   11 IdentListVar: • IdentListVar COMMA IDENTIFIER
   12             | • IDENTIFIER
   27 VarDecl: Type • IdentListVar SEMICOLON

    IDENTIFIER  shift, and go to state 86

    IdentListVar  go to state 87


State 47

   25 StmtOrVarList: StmtOrVarList VarDecl •

    $default  reduce using rule 25 (StmtOrVarList)


State 48

   24 StmtOrVarList: StmtOrVarList Statement •

    $default  reduce using rule 24 (StmtOrVarList)


State 49

   29 Statement: IfStmt •

    $default  reduce using rule 29 (Statement)


State 50

   32 Statement: ExprStmt • SEMICOLON

    SEMICOLON  shift, and go to state 88


State 51

   22 FormalParams: STRING LSQ • RSQ IDENTIFIER

    RSQ  shift, and go to state 89


State 52

   20 FormalParams: Type IDENTIFIER •

    $default  reduce using rule 20 (FormalParams)


State 53

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParamOpt RPAR •

    $default  reduce using rule 17 (MethodHeader)


State 54

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   21 FormalParams: FormalParams COMMA • Type IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    DOUBLE  shift, and go to state 18

    Type  go to state 90


State 55

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt RPAR •

    $default  reduce using rule 16 (MethodHeader)


State 56

   35 Statement: error SEMICOLON •

    $default  reduce using rule 35 (Statement)


State 57

   28 Statement: • LBRACE StmtList RBRACE
   28          | LBRACE StmtList • RBRACE
   29          | • IfStmt
   30          | • WHILE LPAR Expr RPAR Statement
   31          | • RETURN ExprOpt SEMICOLON
   32          | • ExprStmt SEMICOLON
   33          | • PRINT LPAR Expr RPAR SEMICOLON
   34          | • PRINT LPAR STRLIT RPAR SEMICOLON
   35          | • error SEMICOLON
   36 StmtList: StmtList • Statement
   38 IfStmt: • IF LPAR Expr RPAR MatchedStmt ELSE Statement
   39       | • IF LPAR Expr RPAR Statement
   49 ExprStmt: • IDENTIFIER LPAR ArgListOpt RPAR
   50         | • IDENTIFIER LPAR error RPAR
   51         | • IDENTIFIER ASSIGN Expr
   52         | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   53         | • PARSEINT LPAR error RPAR

    error       shift, and go to state 37
    LBRACE      shift, and go to state 38
    RBRACE      shift, and go to state 91
    IF          shift, and go to state 40
    WHILE       shift, and go to state 41
    RETURN      shift, and go to state 42
    PRINT       shift, and go to state 43
    PARSEINT    shift, and go to state 44
    IDENTIFIER  shift, and go to state 45

    Statement  go to state 92
    IfStmt     go to state 49
    ExprStmt   go to state 50


State 58

   38 IfStmt: IF LPAR • Expr RPAR MatchedStmt ELSE Statement
   39       | IF LPAR • Expr RPAR Statement
   54 Expr: • AssignExpr
   55     | • LPAR error RPAR
   56 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   57           | • OrExpr
   58 OrExpr: • OrExpr OR AndExpr
   59       | • AndExpr
   60 AndExpr: • AndExpr AND XorExpr
   61        | • XorExpr
   62 XorExpr: • XorExpr XOR EqExpr
   63        | • EqExpr
   64 EqExpr: • EqExpr EQ RelExpr
   65       | • EqExpr NE RelExpr
   66       | • RelExpr
   67 RelExpr: • RelExpr LT ShiftExpr
   68        | • RelExpr LE ShiftExpr
   69        | • RelExpr GT ShiftExpr
   70        | • RelExpr GE ShiftExpr
   71        | • ShiftExpr
   72 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   73          | • ShiftExpr RSHIFT AddExpr
   74          | • AddExpr
   75 AddExpr: • AddExpr PLUS MulExpr
   76        | • AddExpr MINUS MulExpr
   77        | • MulExpr
   78 MulExpr: • MulExpr STAR UnaryExpr
   79        | • MulExpr DIV UnaryExpr
   80        | • MulExpr MOD UnaryExpr
   81        | • UnaryExpr
   82 UnaryExpr: • MINUS UnaryExpr
   83          | • NOT UnaryExpr
   84          | • PLUS UnaryExpr
   85          | • PostfixExpr
   86 PostfixExpr: • IDENTIFIER DOTLENGTH
   87            | • IDENTIFIER LPAR ArgListOpt RPAR
   88            | • IDENTIFIER LPAR error RPAR
   89            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   90            | • PARSEINT LPAR error RPAR
   91            | • LPAR Expr RPAR
   92            | • IDENTIFIER
   93            | • NATURAL
   94            | • DECIMAL
   95            | • BOOLLIT

    LPAR        shift, and go to state 60
    PARSEINT    shift, and go to state 61
    PLUS        shift, and go to state 62
    MINUS       shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    Expr         go to state 93
    AssignExpr   go to state 71
    OrExpr       go to state 72
    AndExpr      go to state 73
    XorExpr      go to state 74
    EqExpr       go to state 75
    RelExpr      go to state 76
    ShiftExpr    go to state 77
    AddExpr      go to state 78
    MulExpr      go to state 79
    UnaryExpr    go to state 80
    PostfixExpr  go to state 81


State 59

   30 Statement: WHILE LPAR • Expr RPAR Statement
   54 Expr: • AssignExpr
   55     | • LPAR error RPAR
   56 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   57           | • OrExpr
   58 OrExpr: • OrExpr OR AndExpr
   59       | • AndExpr
   60 AndExpr: • AndExpr AND XorExpr
   61        | • XorExpr
   62 XorExpr: • XorExpr XOR EqExpr
   63        | • EqExpr
   64 EqExpr: • EqExpr EQ RelExpr
   65       | • EqExpr NE RelExpr
   66       | • RelExpr
   67 RelExpr: • RelExpr LT ShiftExpr
   68        | • RelExpr LE ShiftExpr
   69        | • RelExpr GT ShiftExpr
   70        | • RelExpr GE ShiftExpr
   71        | • ShiftExpr
   72 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   73          | • ShiftExpr RSHIFT AddExpr
   74          | • AddExpr
   75 AddExpr: • AddExpr PLUS MulExpr
   76        | • AddExpr MINUS MulExpr
   77        | • MulExpr
   78 MulExpr: • MulExpr STAR UnaryExpr
   79        | • MulExpr DIV UnaryExpr
   80        | • MulExpr MOD UnaryExpr
   81        | • UnaryExpr
   82 UnaryExpr: • MINUS UnaryExpr
   83          | • NOT UnaryExpr
   84          | • PLUS UnaryExpr
   85          | • PostfixExpr
   86 PostfixExpr: • IDENTIFIER DOTLENGTH
   87            | • IDENTIFIER LPAR ArgListOpt RPAR
   88            | • IDENTIFIER LPAR error RPAR
   89            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   90            | • PARSEINT LPAR error RPAR
   91            | • LPAR Expr RPAR
   92            | • IDENTIFIER
   93            | • NATURAL
   94            | • DECIMAL
   95            | • BOOLLIT

    LPAR        shift, and go to state 60
    PARSEINT    shift, and go to state 61
    PLUS        shift, and go to state 62
    MINUS       shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    Expr         go to state 94
    AssignExpr   go to state 71
    OrExpr       go to state 72
    AndExpr      go to state 73
    XorExpr      go to state 74
    EqExpr       go to state 75
    RelExpr      go to state 76
    ShiftExpr    go to state 77
    AddExpr      go to state 78
    MulExpr      go to state 79
    UnaryExpr    go to state 80
    PostfixExpr  go to state 81


State 60

   54 Expr: • AssignExpr
   55     | • LPAR error RPAR
   55     | LPAR • error RPAR
   56 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   57           | • OrExpr
   58 OrExpr: • OrExpr OR AndExpr
   59       | • AndExpr
   60 AndExpr: • AndExpr AND XorExpr
   61        | • XorExpr
   62 XorExpr: • XorExpr XOR EqExpr
   63        | • EqExpr
   64 EqExpr: • EqExpr EQ RelExpr
   65       | • EqExpr NE RelExpr
   66       | • RelExpr
   67 RelExpr: • RelExpr LT ShiftExpr
   68        | • RelExpr LE ShiftExpr
   69        | • RelExpr GT ShiftExpr
   70        | • RelExpr GE ShiftExpr
   71        | • ShiftExpr
   72 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   73          | • ShiftExpr RSHIFT AddExpr
   74          | • AddExpr
   75 AddExpr: • AddExpr PLUS MulExpr
   76        | • AddExpr MINUS MulExpr
   77        | • MulExpr
   78 MulExpr: • MulExpr STAR UnaryExpr
   79        | • MulExpr DIV UnaryExpr
   80        | • MulExpr MOD UnaryExpr
   81        | • UnaryExpr
   82 UnaryExpr: • MINUS UnaryExpr
   83          | • NOT UnaryExpr
   84          | • PLUS UnaryExpr
   85          | • PostfixExpr
   86 PostfixExpr: • IDENTIFIER DOTLENGTH
   87            | • IDENTIFIER LPAR ArgListOpt RPAR
   88            | • IDENTIFIER LPAR error RPAR
   89            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   90            | • PARSEINT LPAR error RPAR
   91            | • LPAR Expr RPAR
   91            | LPAR • Expr RPAR
   92            | • IDENTIFIER
   93            | • NATURAL
   94            | • DECIMAL
   95            | • BOOLLIT

    error       shift, and go to state 95
    LPAR        shift, and go to state 60
    PARSEINT    shift, and go to state 61
    PLUS        shift, and go to state 62
    MINUS       shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    Expr         go to state 96
    AssignExpr   go to state 71
    OrExpr       go to state 72
    AndExpr      go to state 73
    XorExpr      go to state 74
    EqExpr       go to state 75
    RelExpr      go to state 76
    ShiftExpr    go to state 77
    AddExpr      go to state 78
    MulExpr      go to state 79
    UnaryExpr    go to state 80
    PostfixExpr  go to state 81


State 61
